--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               playsinline:     Prevents the video from going full-screen on mobile devices.
             -->
             <video id="introVideo" autoplay muted playsinline>
-                <source src="BSc.Physics I SDVM.mp4" type="video/mp4">
+                <source src="images\BSc.Physics I SDVM.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
