--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- ======== HEADER ======== -->
     <header class="page-header">
         <h1 class="header-title">Welcome</h1>
-        <button class="header-button">Get Started</button>
+        <button class="header-button">World of Physics</button>
     </header>
 
     <!-- ======== MAIN CONTENT (VIDEO) ======== -->
@@ -149,7 +149,8 @@
 
     <!-- ======== FOOTER ======== -->
     <footer class="page-footer">
-        <p class="footer-text">© 2024 BSc. Physics I SDVM. All rights reserved.</p>
+        <p class="footer-text">© 2025 BSc. Physics I SDVM. All rights reserved.</p>
+        <p class="footer-text">Created by Pratyush Swain </p>
     </footer>
 
     <!-- ======== JAVASCRIPT FOR REDIRECTION ======== -->
