--- a/semester.html
+++ b/semester.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,6 +34,26 @@
         .quote-slider { background: var(--quote-bg); color: white; text-align: center; padding: 1rem; }
         #quote-text { margin: 0; font-style: italic; opacity: 1; transition: opacity 0.5s ease-in-out; }
         #quote-text.fade-out { opacity: 0; }
+        
+        /* --- INSTITUTION BANNER (NEW) --- */
+        .institution-banner {
+            width: 100%;
+            padding: 1.5rem 0; /* Adds some space above and below the image */
+            text-align: center;
+            background-color: var(--bg-color); /* Ensures it blends with the page background */
+            transition: background-color 0.3s ease;
+        }
+        .institution-banner img {
+            max-height: 100px; /* Controls the maximum height of the image */
+            max-width: 90%; /* Ensures the image is responsive */
+            object-fit: contain; /* Prevents the image from being stretched */
+            opacity: 0.6; /* The transparency effect */
+            transition: opacity 0.3s ease;
+        }
+        body.dark-mode .institution-banner img {
+            opacity: 0.5;
+        }
+
         /* --- SEMESTER GRID (HOME VIEW) --- */
         .semester-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; }
         .semester-box { display: block; text-decoration: none; background-color: var(--card-bg); border: 1px solid var(--border-color); border-radius: 12px; padding: 2rem; text-align: center; box-shadow: 0 4px 15px var(--shadow-color); transition: all 0.3s ease; }
@@ -60,6 +78,12 @@
             </div>
         </div>
     </header>
+
+    <!-- ===== INSTITUTION IMAGE SECTION ===== -->
+    <div class="institution-banner">
+        <img src="images\institution.jpg" alt="Institution Logo or Image">
+    </div>
+    <!-- ===================================== -->
 
     <div class="quote-slider">
         <p id="quote-text"></p>
