--- a/semester.html
+++ b/semester.html
@@ -44,14 +44,14 @@
             /* A real image is now linked directly so it will work */
             background-image: 
                 linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), 
-                url('images/institution.jpg');
+                url('images/institution1.jpg');
         }
 
         /* Different overlay for dark mode with the same real image */
         body.dark-mode .hero-banner {
             background-image: 
                 linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), 
-                url('images/institution.jpg');
+                url('images/institution1.jpg');
         }
 
         /* --- QUOTE SLIDER --- */
