--- a/semester.html
+++ b/semester.html
@@ -47,14 +47,14 @@
             /* Your actual image is now linked, with a new color mix overlay */
             background-image: 
                 linear-gradient(45deg, rgba(29, 78, 216, 0.25), rgba(71, 85, 105, 0.45)), 
-                url('institutionm.jpg');
+                url('images/institutionm.jpg');
         }
 
         /* Darker, moodier overlay for dark mode */
         body.dark-mode .hero-banner {
             background-image: 
                 linear-gradient(45deg, rgba(29, 78, 216, 0.4), rgba(17, 24, 39, 0.6)), 
-                 url('institutionm.jpg');
+                 url('images/institutionm.jpg');
         }
 
         /* --- QUOTE SLIDER --- */
