--- a/semester.html
+++ b/semester.html
@@ -115,7 +115,7 @@
             display: flex;
             padding: 2rem;
             /* YOUR INSTITUTION IMAGE LINK - GUARANTEED TO WORK */
-            background-image: url(images\institutionm.jpg');
+            background-image:  url('images/institutionm.jpg');
             background-size: cover;
             background-position: center;
             opacity: 0;
