--- a/semester.html
+++ b/semester.html
@@ -76,7 +76,15 @@
             font-size: 0.9rem;
             line-height: 1.4;
         }
-        
+
+        .collab-info {
+            border-left: 2px solid var(--surface-border);
+            padding-left: 1rem;
+            font-size: 0.9rem;
+            font-weight: 500;
+            color: var(--text-secondary);
+        }
+
         .theme-switcher { position: relative; }
         #theme-toggle { display: none; }
         .slider {
@@ -220,6 +228,7 @@
         <header class="app-header">
             <div class="logo">
                 <h1>BSc. <span>Physics</span></h1>
+                <div class="collab-info">SDVM, Neelakanthanagar</div>
             </div>
             <div class="header-controls">
                 <div id="datetime" class="datetime"></div>
