--- a/english.html
+++ b/english.html
@@ -85,7 +85,7 @@
     </header>
 
     <main>
-        <div class="intro-section animated-item"><a href="#" class="back-button"><i class="fas fa-arrow-left"></i> Back to Courses</a><div class="filter-container"><i class="fas fa-search"></i><input type="text" id="filter-input" class="filter-input" placeholder="Filter units by name..."></div></div>
+        <div class="intro-section animated-item"><a href="sem2.html" class="back-button"><i class="fas fa-arrow-left"></i> Back to semester 2</a><div class="filter-container"><i class="fas fa-search"></i><input type="text" id="filter-input" class="filter-input" placeholder="Filter units by name..."></div></div>
         
         
         <div class="unit-accordion">
