--- a/english.html
+++ b/english.html
@@ -94,7 +94,7 @@
                 <div class="unit-header">
                     <h2>Unit 1: Introduction to Communication</h2>
                     <div class="unit-header-controls">
-                        <a href="unit1.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
+                        <a href="english.u1.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
                         <i class="fas fa-chevron-down icon"></i>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="unit-header">
                     <h2>Unit 2: Listening & Speaking Skills</h2>
                     <div class="unit-header-controls">
-                        <a href="unit2.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
+                        <a href="english.u2.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
                         <i class="fas fa-chevron-down icon"></i>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                 <div class="unit-header">
                     <h2>Unit 3: Reading & Writing Comprehension</h2>
                     <div class="unit-header-controls">
-                        <a href="unit3.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
+                        <a href="english.u3.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
                         <i class="fas fa-chevron-down icon"></i>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                 <div class="unit-header">
                     <h2>Unit 4: Grammar & Vocabulary Building</h2>
                     <div class="unit-header-controls">
-                        <a href="unit4.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
+                        <a href="english.u4.html" class="unit-details-button" title="View Detailed Unit Page"><i class="fas fa-arrow-up-right-from-square"></i></a>
                         <i class="fas fa-chevron-down icon"></i>
                     </div>
                 </div>
