--- a/semester.html
+++ b/semester.html
@@ -386,7 +386,7 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="sem2.html">Semester Notes</a></li>
-                    <li><a href="mailto:pratyushswain792@gmail.com">Contact Support</a></li>
+                    <li><a href="pratyushkumarswain2005@gmail.com">Contact Support</a></li>
                 </ul>
             </div>
             <div class="footer-column">
