--- a/semester.html
+++ b/semester.html
@@ -379,7 +379,7 @@
         <div class="footer-content">
             <div class="footer-column">
                 <div class="footer-logo">BSc. <span>Physics</span></div>
-                <p>Your central hub for BSc. Physics resources from SDVM, Neelakanthanagar. We provide structured notes and guides to help you succeed in your academic journey.</p>
+                <p>Your central hub for BSc. Physics resources from Saraswati Degree Vidya Mandir, Neelakanthanagar, Bam-2 . We provide structured notes and guides to help you succeed in your academic journey.</p>
             </div>
             <div class="footer-column">
                 <h3>Quick Links</h3>
