--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 
             <section class="content-section">
                 <h2>The Creator</h2>
-                <p>This project was conceptualized, designed, and developed by <strong>Pratyush Swain</strong>. As a student, I recognized the need for a single, reliable source for notes and study materials. My goal was to build a platform that is not only functional but also a pleasure to use, helping my peers and future students streamline their studies and achieve academic excellence.</p>
+                <p>This project is conceptualized, designed, and developed by <strong>Pratyush Swain</strong>. As a student, I recognized the need for a single, reliable source for notes and study materials. My goal was to build a platform that is not only functional but also a pleasure to use, helping my peers and future students streamline their studies and achieve academic excellence.</p>
             </section>
 
             <section class="content-section">
