--- a/privacy.html
+++ b/privacy.html
@@ -185,7 +185,7 @@
                 <div class="collab-info">Privacy Policy</div>
             </div>
             <div class="header-controls">
-                <a href="index.html" class="back-link">
+                <a href="semester.html" class="back-link">
                     <i data-feather="arrow-left"></i>
                     <span>Back to Home</span>
                 </a>
