--- a/terms.html
+++ b/terms.html
@@ -186,7 +186,7 @@
                 <div class="collab-info">Terms of Use</div>
             </div>
             <div class="header-controls">
-                <a href="index.html" class="back-link">
+                <a href="semester.html" class="back-link">
                     <i data-feather="arrow-left"></i>
                     <span>Back to Home</span>
                 </a>
