--- a/semester.html
+++ b/semester.html
@@ -81,7 +81,7 @@
             overflow: hidden;
             display: flex;
             padding: 2.5rem;
-            background-image:url('https://i.imgur.com/KIMcT6k.jpeg'); /* Placeholder Image */
+            background-image:url('images\institutionm.jpg'); /* Placeholder Image */
             background-size: cover;
             background-position: center;
             opacity: 0;
